# trabalho-so-2026.1

./: .dockerignore  Dockerfile  README.md  TESTING.md  docker-compose.yml
back-end/: CMakeLists.txt  Makefile  server.cc
back-end/docs/: cfs.md  custom.md  edf.md  priority.md  sjf.md
back-end/internals/: algorithms.h  core.cc  core.h  handling.cc  handling.h  payload.cc  payload.h  utils.h
back-end/schedulers/: cfs.cc  cfs.h  custom.cc  custom.h  edf.cc  edf.h  fifo.cc  fifo.h  priority.cc  priority.h  rr.cc  rr.h  sample.cc  sample.h  sjf.cc  sjf.h
front-end/: index.html  package-lock.json  package.json
front-end/src/: App.css  App.tsx  algorithmTypes.ts  index.css  schedulerEngine.ts
